# Msticky

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  make_icon.py  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AccountPanel.tsx  ColorPicker.tsx  Icons.tsx  NoteEditor.tsx
apps/desktop/src/lib/: colors.ts  i18n.ts  markdown.ts  native.ts  theme.ts
apps/desktop/src/store/: actions.ts  hooks.ts  repo.ts
apps/desktop/src/sync/: clientAuth.ts  config.ts  e2e.ts  googleAuth.ts  syncEngine.ts
apps/desktop/src/windows/: BoardWindow.tsx  NoteWindow.tsx
dist-installers/Msticky.app/Contents/: Info.plist
dist-installers/Msticky.app/Contents/Resources/: icon.icns
docs/: DEVELOPMENT.md
services/sync-worker/: package.json  schema.sql  tsconfig.json  wrangler.jsonc  ws-test.mjs
services/sync-worker/src/: auth.ts  env.ts  index.ts  notesRepo.ts  userDO.ts
